--- a/CeVHTMLCSS_mod1/desafio005/desafio005.html
+++ b/CeVHTMLCSS_mod1/desafio005/desafio005.html
@@ -14,7 +14,12 @@
     <p>Meu nome é <strong>Francesco Castellano</strong>, sou brasileiro com cidadania italiana. Missionário retornado <strong>d'A Igreja de Jesus Cristo dos Santos dos últimos dias</strong>. Prestei este serviço voluntário, comunitário e religioso na missão Curitiba Sul, que abrange boa parte do sul do estado do Paraná. Ainda planejando minha formação, estou em busca de graduar-me em administração; encontro-me num momento de reflexão sobre fazer uma transição entre universidades. Comecei meu curso numa renomada universidade brasileira, na modalidade presencial, porém forçadamente online, por conta da pandemia de COVID-19.</p>
     <h2>Quer falar comigo?</h2>
     <ul>
-        <li></li>
+        <li><img src="icone-github.png" alt="Ícone do Github"><a href="https://github.com/Francesco118" target="_blank" rel="noopener noreferrer">Meu Github</a></li>
+        <li><img src="icone-linkedin.png" alt=""><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"></a></li>
+        <li><img src="icone-instagram.png" alt=""><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">instagram</a></li>
+        <li><img src="icone-facebook.png" alt="Ícone do Facebook"><a href="https://pt-br.facebook.com/francesco.castellano.393/" target="_blank">Meu Facebook</a></li>
+        <li><img src="icone-youtube.png" alt="Ícone youtube"><a href="https://www.youtube.com/channel/UC9lyZvSdQ8woYGygrNZ3xbg/about">Meu Canal no YouTube</a></li>
+        <li><img src="icone-twitter.png" alt=""><strong>Não possuo conta no twitter.</strong></li>
     </ul>
 </body>
 </html>
