--- a/CeVHTMLCSS_mod1/desafio008/AreaAmarela.html
+++ b/CeVHTMLCSS_mod1/desafio008/AreaAmarela.html
@@ -9,6 +9,6 @@
 <body style="color: darkorange; background-color: khaki;">
     <h1>Bem-vindo à Área Amarela!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut hic alias exercitationem, odio, aperiam odit assumenda ex aspernatur modi optio, beatae ullam minima numquam. Unde nobis dolores nulla itaque saepe?</p>
-    <a href="index.html">Retornar à Área Cinza</a>
+    <a href="index.html"><img src="seta-voltar-nav.png" alt=""></a>
 </body>
 </html>
