--- a/CeVHTMLCSS_mod1/desafio008/AreaVerde.html
+++ b/CeVHTMLCSS_mod1/desafio008/AreaVerde.html
@@ -9,6 +9,6 @@
 <body style="color: darkgreen; background-color: LightGreen;">
     <h1>Bem vindo à Área Verde!</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, deserunt libero aliquam porro molestiae vero cupiditate veritatis consequuntur minus ducimus iure, excepturi alias rerum recusandae eaque doloremque voluptatem a earum.</p>
-    <a href="index.html">Retornar à Área Cinza</a>
+    <a href="index.html"><img src="seta-voltar-nav.png" alt=""></a>
 </body>
 </html>
