--- a/CeVHTMLCSS_mod1/desafio008/index.html
+++ b/CeVHTMLCSS_mod1/desafio008/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navegação</title>
 </head>
-<body style="color: gray: 21px;; background-color: Silver;">
+<body style="color: gray; background-color: Silver;">
     <h1>Área Cinza</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis voluptas odio qui provident libero distinctio voluptates. Debitis esse distinctio vero? Soluta, dolore reprehenderit! Voluptatum error tempora recusandae nam commodi dolores.</p>
     <a href="AreaVerde.html">Acessar Área Verde</a>
