--- a/CeVHTMLCSS_mod1/desafio009/index.html
+++ b/CeVHTMLCSS_mod1/desafio009/index.html
@@ -17,5 +17,7 @@
 
    <h2>Observando Gaivotas</h2>
    <video src="media/video_gaivotas.mp4" width="540" height="470" controls loop muted poster="media/gaivota.jpg"></video>
+
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/-eYaSwwmGl4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
