--- a/CeVHTMLCSS_mod2/FamilyHistory/HolyCow/Index.html
+++ b/CeVHTMLCSS_mod2/FamilyHistory/HolyCow/Index.html
@@ -10,9 +10,12 @@
 <body>
     <header>
         <nav>
-            <a href="Index.html"><img src="imagens/HolyCowLogo_60x60_3kb.jpg" alt="Logo HolyCowLogo_400x400_34kb"></a></br>
+            <a href="Index.html" id="logo"><img id="homebtn" src="imagens/HolyCowLogo_60x60_3kb.jpg" alt="Logo HolyCowLogo_400x400_34kb"></a></br>
             <a href="Produtos.html">Produtos</a>
+            <a href="#">Dark Kitchens</a>
+            <a href="#">Franquias</a>
             <a href="NossaHistoria.html">Quem Somos</a>
+            <a href="#">Mídia</a>
             <a href="Contato.html">Contato</a>
         </nav>
     </header>
@@ -20,7 +23,11 @@
         <article>
             <h1>História do Cookie</h1>
             <aside>
-                <p>By Francesco Castellano</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam accusantium porro sint obcaecati, 
+                    architecto eveniet animi nobis molestias iusto qui iure aperiam consectetur voluptatibus ratione quos 
+                    nostrum dignissimos possimus ducimus! 
+                    </br>By Francesco Castellano
+                </p>
             </aside>
         </article>
     </main>
