--- a/CeVHTMLCSS_mod2/FamilyHistory/HolyCow/NossaHistoria.html
+++ b/CeVHTMLCSS_mod2/FamilyHistory/HolyCow/NossaHistoria.html
@@ -17,14 +17,41 @@
             </nav>
         </header>
         <main>
-            <article>
-                <h1>Quem Somos?</h1>
+            <article id="NossaHistoria">
+                <h1>Nossa História</h1>
                 <p>
                     Você sabe o que significa "Holy Cow"? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur recusandae repellendus ipsa temporibus, neque praesentium harum ab minima doloribus sunt culpa debitis unde perferendis dolores tempore dolor maiores repellat quidem.
                 </p>
                 <aside>
-                    <img src="" alt="">
+                    <img src="imagens/cookies-na-sacola.jpg" alt="amigos juntando cookies">
                 </aside>
+            </article>
+            <article id="SobreNos">
+                <h1>Sobre Nós</h1>
+                <p>
+                    Você sabe o que significa "Holy Cow"? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur recusandae repellendus ipsa temporibus, neque praesentium harum ab minima doloribus sunt culpa debitis unde perferendis dolores tempore dolor maiores repellat quidem.
+                </p>
+                <aside>
+                    <img src="imagens/cafezinho-duckbill.jpg" alt="">
+                </aside>
+                <article id="Depoimentos">
+                    <h1>Sobre Nós</h1>
+                    <p>
+                        Você sabe o que significa "Holy Cow"? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur recusandae repellendus ipsa temporibus, neque praesentium harum ab minima doloribus sunt culpa debitis unde perferendis dolores tempore dolor maiores repellat quidem.
+                    </p>
+                    <aside>
+                        <img src="imagens/CookieTradicionl.png" alt="">
+                    </aside>
+                </article>
+                <article id="FaleConosco">
+                    <h1>Sobre Nós</h1>
+                    <p>
+                        Você sabe o que significa "Holy Cow"? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur recusandae repellendus ipsa temporibus, neque praesentium harum ab minima doloribus sunt culpa debitis unde perferendis dolores tempore dolor maiores repellat quidem.
+                    </p>
+                    <aside>
+                        <img src="imagens/tabua-nossa-marca.jpg" alt="">
+                    </aside>
+                </article>
             </article>
         </main>
         <footer>
