--- a/CeVHTMLCSS_mod2/FamilyHistory/HolyCow/Produtos.html
+++ b/CeVHTMLCSS_mod2/FamilyHistory/HolyCow/Produtos.html
@@ -26,6 +26,20 @@
                     <img src="" alt="">
                 </aside>
             </article>
+            <article>
+                <ul>
+                    <li style="
+                    box-sizing: border-box;
+                    list-style: none;
+                    height: 60px;
+                    width: 45px;
+                    position: absolute;
+                    grid-area: 1 / 1 / 1 / 2;"> <img src="imagens/CookieTradicionl.png" alt="Foto do cookie de massa de baunilha e recheio de chocolate."></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </article>
         </main>
         <footer>
     
