--- a/CeVHTMLCSS_mod2/HolyCow/Darkitchen.html
+++ b/CeVHTMLCSS_mod2/HolyCow/Darkitchen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HolyCow</title>
+    <title>Dark Kitchens</title>
     <link rel="stylesheet" href="CookieStyle.css">
 </head>
 <body>
@@ -18,21 +18,6 @@
             <a href="Midia.html">Mídia</a>
             <a href="Contato.html">Contato</a>
         </nav>
-    </header>
-    <main>
-        <article>
-            <h1>História do Cookie</h1>
-            <aside>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam accusantium porro sint obcaecati, 
-                    architecto eveniet animi nobis molestias iusto qui iure aperiam consectetur voluptatibus ratione quos 
-                    nostrum dignissimos possimus ducimus! 
-                    </br>By Francesco Castellano
-                </p>
-            </aside>
-        </article>
-    </main>
-    <footer>
-        <p>Copyright (c) Francesco Castellano</p>
-    </footer>
+    </header> 
 </body>
 </html>
