--- a/CeVHTMLCSS_mod2/HolyCow/Midia.html
+++ b/CeVHTMLCSS_mod2/HolyCow/Midia.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR ">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HolyCow</title>
+    <title>Mídia</title>
     <link rel="stylesheet" href="CookieStyle.css">
 </head>
 <body>
@@ -19,20 +19,5 @@
             <a href="Contato.html">Contato</a>
         </nav>
     </header>
-    <main>
-        <article>
-            <h1>História do Cookie</h1>
-            <aside>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam accusantium porro sint obcaecati, 
-                    architecto eveniet animi nobis molestias iusto qui iure aperiam consectetur voluptatibus ratione quos 
-                    nostrum dignissimos possimus ducimus! 
-                    </br>By Francesco Castellano
-                </p>
-            </aside>
-        </article>
-    </main>
-    <footer>
-        <p>Copyright (c) Francesco Castellano</p>
-    </footer>
 </body>
 </html>
