--- a/CeVHTMLCSS_mod2/HolyCow/NossaHistoria.html
+++ b/CeVHTMLCSS_mod2/HolyCow/NossaHistoria.html
@@ -10,9 +10,12 @@
     <body>
         <header>
             <nav>
-                <a href="Index.html"><img src="imagens/HolyCowLogo_60x60_3kb.jpg" alt="Logo HolyCowLogo_400x400_34kb"></a></br>
+                <a href="Index.html"><img style="border-radius: 50%;" src="imagens/HolyCowLogo_60x60_3kb.jpg" alt="Logo HolyCowLogo_400x400_34kb"></a></br>
                 <a href="Produtos.html">Produtos</a>
+                <a href="Darkitchen.html">Dark Kitchens</a>
+                <a href="Franquias.html">Franquias</a>
                 <a href="NossaHistoria.html">Quem Somos</a>
+                <a href="Midia.html">Mídia</a>
                 <a href="Contato.html">Contato</a>
             </nav>
         </header>
