Starting with Bootstrep
Aplying buttons on the menu bar, inside nav tag.

Using cached version of Bootstrap’s compiled CSS and JS to my project

--- a/CeVHTMLCSS_mod2/HolyCow/Contato.html
+++ b/CeVHTMLCSS_mod2/HolyCow/Contato.html
@@ -11,12 +11,18 @@
         <header>
             <nav>
                 <a href="Index.html"><img style="border-radius: 50%;" src="imagens/HolyCowLogo_60x60_3kb.jpg" alt="Logo HolyCowLogo_400x400_34kb"></a></br>
-                <a href="Produtos.html">Produtos</a>
-                <a href="Darkitchen.html">Dark Kitchens</a>
-                <a href="Franquias.html">Franquias</a>
-                <a href="NossaHistoria.html">Quem Somos</a>
-                <a href="Midia.html">Mídia</a>
-                <a href="Contato.html">Contato</a>
+                <!--<a href="Produtos.html">Produtos</a>-->
+                <a class="btn btn-dark" href="Produtos.html" role="button">Produtos</a>
+                <!--<a href="Darkitchen.html">Dark Kitchens</a>-->
+                <a class="btn btn-dark" href="Darkitchen.html" role="button">Dark Kitchens</a>
+                <!--<a href="Franquias.html">Franquias</a>-->
+                <a class="btn btn-dark" href="Franquias.html" role="button">Franquias</a>
+                <!--<a href="NossaHistoria.html">Quem Somos</a>-->
+                <a class="btn btn-dark" href="NossaHistoria.html" role="button">Nossa História</a>
+                <!--<a href="Midia.html">Mídia</a>-->
+                <a class="btn btn-dark" href="Midia.html" role="button">Mídia</a>
+                <!--<a href="Contato.html">Contato</a>-->
+                <a class="btn btn-dark" href="Contato.html" role="button">Contato</a>
             </nav>
         </header>
         <main>
