--- a/CeVHTMLCSS_mod2/HolyCow/Index.html
+++ b/CeVHTMLCSS_mod2/HolyCow/Index.html
@@ -6,17 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HolyCow</title>
     <link rel="stylesheet" href="CookieStyle.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
             <a href="Index.html"><img style="border-radius: 50%;" src="imagens/HolyCowLogo_60x60_3kb.jpg" alt="Logo HolyCowLogo_400x400_34kb"></a></br>
-            <a href="Produtos.html">Produtos</a>
-            <a href="Darkitchen.html">Dark Kitchens</a>
-            <a href="Franquias.html">Franquias</a>
-            <a href="NossaHistoria.html">Quem Somos</a>
-            <a href="Midia.html">Mídia</a>
-            <a href="Contato.html">Contato</a>
+            <!--<a href="Produtos.html">Produtos</a>-->
+            <a class="btn btn-dark" href="Produtos.html" role="button">Produtos</a>
+            <!--<a href="Darkitchen.html">Dark Kitchens</a>-->
+            <a class="btn btn-dark" href="Darkitchen.html" role="button">Dark Kitchens</a>
+            <!--<a href="Franquias.html">Franquias</a>-->
+            <a class="btn btn-dark" href="Franquias.html" role="button">Franquias</a>
+            <!--<a href="NossaHistoria.html">Quem Somos</a>-->
+            <a class="btn btn-dark" href="NossaHistoria.html" role="button">Nossa História</a>
+            <!--<a href="Midia.html">Mídia</a>-->
+            <a class="btn btn-dark" href="Midia.html" role="button">Mídia</a>
+            <!--<a href="Contato.html">Contato</a>-->
+            <a class="btn btn-dark" href="Contato.html" role="button">Contato</a>
         </nav>
     </header>
     <main>
